k8s_single_update/service-a.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-a
  namespace: development
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: app-a
